Updating some data

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,11 +4,11 @@
 @string{aps = {American Physical Society,}}
 
 @book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+  title={Acceso a bases de datos desde ambientes virtuales},
+  author={Alan Maciel Salcedo},
+  year={1999},
+  publisher={Tesis},
+  html={tesis.html}
 }
 
 @book{einstein1956investigations,
